--- a/localisation/russian/events_l_russian.yml
+++ b/localisation/russian/events_l_russian.yml
@@ -4,9 +4,15 @@
  avangard.1.d:0 "Сегдня в 4 часа утра, загаворщики попытались убить нашего ГенСека Сануресса, но потерпели неудачу, и сануресс самолично сбежал из страны. Теперь осталось только гадать что с ним произошло. Новым правителем Авангарда объявлен внезапно Троцкий! Слава революции!"
  avangard.1.a:0 "Ура! Я Гей!"
  AVG.1.t:0 "Выборы"
- AVG.1.d:0 "Долгожданные выборы на Авангарде. Сталкиваются две идеи развития сервера, модель 2020 года и 'Андромедиан'. Что же дорогие граждане Авангарда выберут?"
- AVG.1.a:0 "Я выбираю Maks'a"
- AVG.1.b:0 "Я выбираю SanuresS'a"
+ AVG.1.d:0 "Сервер почти готов, осталось провести выборы. Мы определили парочку людей, которые прошли во второй тур. Также за демократичностью выборов у нас следит доброволец Нэвэльный, поэтому за честность наших выборов не приходится беспокоится. Итак, участки закрыты, народ выбрал..."
+ AVG.1.a:0 "... Фанатика Япония"
+ AVG.1.b:0 "... Himik'а"
+
+
+ AVG.9.t:0 "Выборы"
+ AVG.9.d:0 "Долгожданные выборы на Авангарде. Сталкиваются две идеи развития сервера, модель 2020 года и 'Андромедиан'. Что же дорогие граждане Авангарда выберут?"
+ AVG.9.a:0 "Я выбираю Maks'a"
+ AVG.9.b:0 "Я выбираю SanuresS'a"
  AVG.2.t:0 "Начало реформ"
  AVG.2.d:0 "Реформы идут хорошо"
  AVG.2.a:0 "Ну и замечательно"
